--- a/accessibility/fix-a11y/04-index.html
+++ b/accessibility/fix-a11y/04-index.html
@@ -169,10 +169,8 @@
                         <p>Stay updated with our latest trends</p>
                         <form action="#" method="post">
                             <div class="input-group">
-                                <label for="email" class="visually-hidden"></label>
-                                <input id="email" class="form-control" type="email" name="email" autocomplete='email'
-                                    required aria-required="true">
-                                <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
+                                <input class="form-control" type="text" name="email" placeholder="Enter Email Address">
+                                <div class="input-group-btn"><a class="btn" type="submit">Validate</a></div>
                             </div>
                         </form>
                     </div>
